Project was restructured according to development patterns. Logging was added using integration instruments